# create_django

./: pyproject.toml
blog/: views.py
blog/templates/blog/: article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/templates/: base.html  contacts.html  product_detail.html  product_list.html
catalog/templates/catalog/: newmodel_confirm_delete.html  newmodel_detail.html  newmodel_form.html  newmodel_list.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: urls.py  views.py
users/templates/: login.html
users/templates/users/: user_form.html
