[tool.poetry]
name = "django-work"
version = "0.1.0"
description = ""
authors = ["Ivan <jaloylee@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
black = "^25.1.0"
pillow = "^11.1.0"
ipython = "^8.32.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
